discussion/kv_engine/184180/184180_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53042: Aggregate stats for multiple buckets

Adds a new GlobalTask called CrossBucketStatsAggregator which can be run
periodically to update the stats we care about for the quota sharing
group. I will use this task to update the memory condition checks such
that they consider the pooled watermarks and memory usage of all engines
sharing quota.

Change-Id: I755e139f2c87ed5ce3ce2d77680e72ac7dca406a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-16 11:58:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-16 13:05:28.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22219/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:45:34: error: out-of-line definition of "updateStat" does not match any declaration in "CrossBucketStatsAggregator" [clang-diagnostic-error]
void CrossBucketStatsAggregator::updateStat(const std::vector<E>& engines,
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:58:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, estimatedTotalMemoryUsed);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:59:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, maxDataSize);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:60:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemCurrent);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:61:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemLowWatermark);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:62:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemHighWatermark);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:89:32: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    void updateStat(const std::vector<E>& engines,
                               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22219/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:45:34:
error: out-of-line definition of "updateStat" does not match any declaration in "CrossBucketStatsAggregator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22219/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51535/ : FAILURE

Failure of GoogleTest "OneBucketQSPagingTest.SingleBucketEvictionWorks":

<pre>
[ RUN      ] OneBucketQSPagingTest.SingleBucketEvictionWorks
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_cluster/quota_sharing_paging_test.cc(216): error: Value of: getMemStats(0).isBelowLowWatermark()
  Actual: false
Expected: true
Expected bucket 0 to be below lower watermark: {current: 7.3750534057617188 MiB, lower: 7 MiB, upper: 8 MiB}
WARNING: Failed to delete directory: remove_all: The process cannot access the file because it is being used by another process.: "C:\Jenkins\workspace\kv_engine-windows-master\build\cluster_test_d49833"
         Sleep 20ms before retry
WARNING: Failed to delete directory: remove_all: The process cannot access the file because it is being used by another process.: "C:\Jenkins\workspace\kv_engine-windows-master\build\cluster_test_d49833"
         Sleep 20ms before retry
WARNING: Failed to delete directory: remove_all: The process cannot access the file because it is being used by another process.: "C:\Jenkins\workspace\kv_engine-windows-master\build\cluster_test_d49833"
         Sleep 20ms before retry
WARNING: Failed to delete directory: remove_all: The process cannot access the file because it is being used by another process.: "C:\Jenkins\workspace\kv_engine-windows-master\build\cluster_test_d49833"
         Sleep 20ms before retry
WARNING: Failed to delete directory: remove_all: The process cannot access the file because it is being used by another process.: "C:\Jenkins\workspace\kv_engine-windows-master\build\cluster_test_d49833"
         Sleep 20ms before retry
WARNING: Failed to delete directory: remove_all: The process cannot access the file because it is being used by another process.: "C:\Jenkins\workspace\kv_engine-windows-master\build\cluster_test_d49833"
         Sleep 20ms before retry
[  FAILED  ] OneBucketQSPagingTest.SingleBucketEvictionWorks (2107 ms)
OneBucketQSPagingTest.SingleBucketEvictionWorks
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51535/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43259/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:89:32:
error: no template named "vector" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43259/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21822/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12026/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11937/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25542/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24261/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32679/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23786/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24681/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/977/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
